converted to java, removed google sign-in, updated dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,12 @@
 
         <activity
             android:name=".SignInActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+           android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".HomeScreenActivity" />
 
     </application>
 
