--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 repositories {
@@ -33,4 +44,19 @@ dependencies {
     implementation group: 'com.android.support', name: 'support-v4', version: '28.0.0'
     implementation group: 'com.android.support', name: 'design', version: '28.0.0'
     implementation group: 'com.rengwuxian.materialedittext', name: 'library', version: '2.1.4'
+    implementation group: 'org.springframework.android', name: 'spring-android-rest-template', version: '1.0.1.RELEASE'
+    implementation 'commons-httpclient:commons-httpclient:3.1'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+
+    annotationProcessor "org.projectlombok:lombok:1.18.16"
+    compileOnly  "org.projectlombok:lombok:1.18.16"
+
+    implementation "com.google.dagger:dagger:2.16"
+    implementation "com.google.dagger:dagger-android:2.16"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
+
+    // implementation 'com.android.volley:volley:1.1.1'
+    // implementation 'com.google.code.gson:gson:2.8.6'
 }
