--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'com.android.support', name: 'customtabs', version: '28.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
